Fix line-spacing of titles, move date in line with title.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,10 @@ header {
     text-align: center;
 }
 
+.navbar {
+    margin-bottom: 30px;
+}
+
 .navlink {
     font-size: 20px;
 }
@@ -45,6 +49,7 @@ header {
 
 nav, h1, h2, h3, h4, h5, h6 {
     font-family: 'Helvetica', sans-serif;
+    line-height: normal;
 }
 
 /* Making it a reasonable size on mobile. */
@@ -89,11 +94,16 @@ div.codehilite {
     margin-bottom: 20px;
 }
 
-.post-title {
+.post-entry-title {
     font-size: 18px;
     margin-bottom: 5px;
 }
 
+.post-entry-date {
+    color: rgb(128, 128, 128);
+}
+
 .post-date {
+    font-size: 18px;
     color: rgb(128, 128, 128);
 }
